tests/reference/asr-incorrect_number_args_function-1f6f6fa.stderr
semantic error: More actual than formal arguments in procedure call
 --> tests/errors/incorrect_number_args_function.f90:3:25
  |
3 |     print *, helloWorld(5.1, 2)
  |                         ^^^^^^ 
